CI: removed boolean definition (which appears to not be a boolean at all)

--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -36,7 +36,7 @@ jobs:
           #  enforce that.
           #
           EXPECT_EXAMPLES: true
-          EXPECT_UNITTESTS: false
+          #EXPECT_UNITTESTS: true
 
           # Although dependencies will be installed automatically via the
           # library manager, your library under test may require an
